--- a/style.css
+++ b/style.css
@@ -621,7 +621,106 @@ body.menu-open {
   color: white;
 }
 */
+.name {
+  display: none;
+}
 
 .main-nav ul li {
   font-weight: 100;
 }
+.burger {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .header-top {
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  .logo img {
+    width: 80px;
+    height: 50px;
+  }
+
+  .main-nav {
+    display: none; /* ховаємо звичайне меню */
+  }
+
+  .burger {
+    position: absolute;
+    top: 20px;
+    right: 20px; /* Замість left: 20px */
+    z-index: 1000;
+    background: none;
+    border: none;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+  }
+
+  #fullscreenMenu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1a1a1a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  #fullscreenMenu a {
+    color: white;
+    font-size: 24px;
+    margin: 15px 0;
+    text-decoration: none;
+  }
+
+  #closeMenuBtn {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 40px;
+    color: white;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  .button-1 {
+    position: relative;
+    width: 200px;
+    height: 100px;
+    font-size: 30px;
+    font-weight: 1000;
+    background: #b90094;
+    border: 3px solid #b90094;
+    color: white;
+    box-shadow: none;
+    margin-top: 100px;
+    cursor: pointer;
+    overflow: hidden;
+    animation: pulse-scale 2s infinite;
+    transition: color 0.3s ease;
+    z-index: 0;
+    clip-path: polygon(
+      0 0,
+      calc(100% - 30px) 0,
+      100% 30px,
+      100% 100%,
+      30px 100%,
+      0 calc(100% - 30px)
+    );
+    transition: background 0.3s ease, color 0.3s ease;
+  }
+  .pro {
+    display: none;
+  }
+  .name {
+    display: block;
+  }
+}
+
